# whisper-gstreamer

./: .gitignore  Dockerfile  Dockerfile_mypy3_11  README.md  build_docker.sh  config_de.yml  config_fr.yml  docker-compose.yml  docker_de_config.yaml  docker_de_config.yml  docker_en_config.yml  download-models.sh  german-distilled-model  gstmicpipeline.py  local_de_config.yaml  local_de_config.yml  local_en_config.yaml  local_en_config.yml  pipeline-examples.txt  pyproject.toml  remote_config.yml  requirements.txt  run_docker.sh  run_vosk.sh  run_whisper.sh  transcriptor.py  utils.sh  vad_iterator.py  vadmicrowhisp.py
src/: __init__.py  gstmicpipeline.py  mqtt_client.py  transcriptor.py  vad_iterator.py  vosk_transcriptor.py  whisper_transcriptor.py
