[project]
name = "whisper-gstreamer"
version = "1.2.0"
description = "A package to transcribe microphone or file input using whisper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pygobject>=3.48.1",
    "pyyaml>=6.0",
    "resampy>=0.4.3",
    "torch>=2.8.0",
    "ctranslate2>=4.6.0",
    "faster-whisper==1.2.1",
    "vosk>=0.3.45",
]
